# Quantitative-Trading-with-ML-Integration

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
artifacts/: bootstrap.json  mcpt.json  metrics.json  params.json
configs/: config.example.yaml
scripts/: daily_run.py  run_sanity_checks.py  run_strategy.py  verify_setup.py
src/: cli.py
src/data/collectors/: yfinance_collector.py
src/execution/paper/: paper_trader.py
src/logging/mlflow/: mlflow_manager.py
src/logging/trades/: trade_logger.py
src/neural_quant/: __init__.py
src/neural_quant/analysis/: __init__.py  allocation_methods.py  basic_exits.py  bootstrap.py  mcpt.py  orchestration.py  position_management.py  quant_researcher.py  regime_filter.py  run_qa.py  strategy_developer.py  summary_generator.py  volatility_targeting.py  walkforward.py  weekly_memo.py
src/neural_quant/core/: __init__.py  backtest.py  metrics.py  portfolio_backtest.py
src/neural_quant/data/: __init__.py  yf_loader.py
src/neural_quant/logging/: __init__.py
src/neural_quant/scripts/: __init__.py  run_strategy.py  verify_setup.py
src/neural_quant/strategies/: __init__.py  bollinger_bands.py  cross_sectional_momentum.py  momentum.py  strategy_registry.py  volatility_breakout.py
src/neural_quant/ui/: __init__.py  app.py
src/neural_quant/utils/: __init__.py  llm_assistant.py  time_utils.py
src/risk/: position_sizing.py
src/utils/config/: config_manager.py
tests/: test_cost_reconciliation.py  test_time_utils.py  test_validation.py
(+17 files in other folders)
