[project]
name = "neural-quant"
version = "0.1.0"
description = "Backtesting + MLflow + Streamlit for quant experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0,<2.0.0",
    "yfinance>=0.2.12",
    "mlflow>=2.7.0",
    "streamlit>=1.49.0",
    "scikit-learn>=1.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.6.0",
    "scipy>=1.10.0",
    "backtrader>=1.9.78",
    "alpaca-trade-api>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "xgboost>=1.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "redis>=4.5.0",
    "requests>=2.31.0",
    "websockets>=9.0,<11",
    "schedule>=1.2.0",
    "pandas-market-calendars>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
